Fix: adjust width of about-me-background for better layout on smaller screens

--- a/css/media-part-2.css
+++ b/css/media-part-2.css
@@ -1,6 +1,6 @@
 ﻿@media (max-width: 860px) {
     .about-me-background {
-        width: 100%;
+        width: 60%;
         margin-bottom: 16px;
     }
 
